Fixed systemd scripts

--- a/systemd/partyzone-master.service
+++ b/systemd/partyzone-master.service
@@ -1,16 +1,11 @@
 [Unit]
-BindsTo=Bmos.service
-Requires=postgresql-9.5
-After=network.target postgresql-9.5
-Description=Bmos Server
+Requires=pyro4-nameserver
+After=pyro4-nameserver
+Description=Partyzone master player
 
 [Service]
-Type=forking
-# The PID file is optional, but recommended in the manpage
-# "so that systemd can identify the main process of the daemon"
-PIDFile=/var/run/bmos/bmos.pid
-WorkingDirectory=/opt/bmos
-ExecStart=/opt/bmos/BmosServer.py start
+Type=simple
+ExecStart=/usr/bin/partyzone --playertype master --host 192.168.119.54
 
 [Install]
 WantedBy=multi-user.target
