--- a/systemd/partyzone-master.service
+++ b/systemd/partyzone-master.service
@@ -5,6 +5,7 @@ Description=Partyzone master player
 
 [Service]
 Type=simple
+Environment=GI_TYPELIB_PATH=/usr/local/lib/girepository-1.0
 ExecStart=/usr/bin/partyzone --playertype master --host 192.168.119.54
 
 [Install]
