--- a/beetsplug/web/package.json
+++ b/beetsplug/web/package.json
@@ -76,7 +76,7 @@
     "aurelia-history-browser": "^1.0.0-rc.1.0.0",
     "aurelia-loader-webpack": "^1.0.0-rc.1.0.0",
     "aurelia-logging-console": "^1.0.0-rc.1.0.0",
-    "aurelia-materialize-bridge": "^0.10.0",
+    "aurelia-materialize-bridge": "^0.10.4",
     "aurelia-pal-browser": "^1.0.0-rc.1.0.0",
     "aurelia-polyfills": "^1.0.0-rc.1.0.0",
     "aurelia-route-recognizer": "^1.0.0-rc.1.0.0",
@@ -90,7 +90,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
     "materialize": "^1.0.0",
-    "materialize-css": "^0.97.6"
+    "materialize-css": "^0.97.7"
   },
   "devDependencies": {
     "@easy-webpack/config-aurelia": "^2.0.1",
@@ -122,6 +122,7 @@
     "cross-env": "^1.0.8",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
+    "jspm": "^0.16.45",
     "karma": "^1.0.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
