--- a/systemd/pyro4-nameserver.service
+++ b/systemd/pyro4-nameserver.service
@@ -4,7 +4,7 @@ Description=Pyro4 nameserver
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 /usr/bin/pyro4-ns -n 0.0.0.0
+ExecStart=/usr/bin/python /usr/local/bin/pyro4-ns -n 0.0.0.0
 
 [Install]
 WantedBy=multi-user.target
