--- a/systemd/partyzone-ehlanas_room.service
+++ b/systemd/partyzone-ehlanas_room.service
@@ -1,12 +1,11 @@
 [Unit]
-Requires=pyro4-nameserver.service
-After=pyro4-nameserver.service
-Description=Partyzone upstairs hall slave player
+After=network.target
+Description=Partyzone Ehlana's slave player
 
 [Service]
 Type=simple
 Environment=GI_TYPELIB_PATH=/usr/local/lib/girepository-1.0
-ExecStart=/usr/bin/partyzone --playertype slave --name "Ehlana's Room" --card hw:5,0 --host 127.0.0.1
+ExecStart=/usr/bin/partyzone --playertype slave --name "Ehlana's Room" --card hw:1,0 --host 192.168.1.229
 
 [Install]
 WantedBy=multi-user.target
