--- a/systemd/partyzone-kitchen.service
+++ b/systemd/partyzone-kitchen.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=Partyzone upstairs hall slave player
+After=network.target
+Description=Partyzone kitchen slave player
 
 [Service]
 Type=simple
 Environment=GI_TYPELIB_PATH=/usr/local/lib/girepository-1.0
-ExecStart=/opt/PartyZone/partyzone --playertype slave --name "Kitchen" --card hw:0,0
+ExecStart=/usr/bin/partyzone --playertype slave --name "Kitchen" --card hw:0,0 --host 192.168.1.229
 
 [Install]
 WantedBy=multi-user.target
