--- a/systemd/partyzone-upstairs_hall.service
+++ b/systemd/partyzone-upstairs_hall.service
@@ -1,12 +1,11 @@
 [Unit]
-Requires=pyro4-nameserver.service
-After=pyro4-nameserver.service
+After=network.target
 Description=Partyzone upstairs hall slave player
 
 [Service]
 Type=simple
 Environment=GI_TYPELIB_PATH=/usr/local/lib/girepository-1.0
-ExecStart=/usr/bin/partyzone --playertype slave --name "Upstairs Hall" --card hw:2,0 --host 127.0.0.1
+ExecStart=/usr/bin/partyzone --playertype slave --name "Upstairs Hall" --card hw:2,0 --host 192.168.1.229
 
 [Install]
 WantedBy=multi-user.target
