--- a/beetsplug/web/package.json
+++ b/beetsplug/web/package.json
@@ -32,7 +32,7 @@
     "build:prod": "cross-env NODE_ENV=production npm run webpack -- --progress --profile",
     "start": "npm run server:dev",
     "server": "npm run server:dev",
-    "server:dev": "cross-env NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server --inline --progress --profile --watch",
+    "server:dev": "cross-env NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server --inline --progress --profile --watch --host 0.0.0.0",
     "server:dev:hmr": "npm run server:dev -- --hot",
     "server:prod": "http-server dist --cors",
     "webpack": "cross-env ./node_modules/.bin/webpack",
@@ -138,7 +138,7 @@
     "typescript": ">=1.9.0-dev || ^2.0.0",
     "typings": "^1.3.0",
     "wait-on": "^1.5.2",
-    "webpack": ">=2.1.0-beta.13 || ^2.1.0",
+    "webpack": "^2.1.0-beta.21",
     "webpack-dev-server": ">=2.1.0-beta.0 || ^2.1.0"
   },
   "babel": {
