--- a/systemd/partyzone-master.service
+++ b/systemd/partyzone-master.service
@@ -1,6 +1,6 @@
 [Unit]
 Requires=pyro4-nameserver.service
-After=pyro4-nameserver.service
+After=pyro4-nameserver.service partyzone-netclock.service
 Description=Partyzone master player
 
 [Service]
