--- a/beetsplug/web/package.json
+++ b/beetsplug/web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aurelia-skeleton-navigation-webpack",
-  "version": "1.0.0-beta.3.0.0",
-  "description": "A starter kit for building a standard navigation-style app with Aurelia and webpack.",
+  "name": "partyzone",
+  "version": "1.0.0",
+  "description": "Partyzone controller with Aurelia and webpack.",
   "main": "dist/electron.js",
   "productName": "Aurelia Electron",
   "scripts": {
