--- a/beetsplug/web/package.json
+++ b/beetsplug/web/package.json
@@ -67,6 +67,7 @@
     }
   },
   "dependencies": {
+    "@easy-webpack/config-copy-files": "^1.1.2",
     "aurelia-bootstrapper-webpack": "^1.0.0",
     "aurelia-dialog": "^1.0.0-beta.3.0.1",
     "aurelia-event-aggregator": "^1.0.0",
@@ -88,8 +89,8 @@
     "font-awesome": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.0",
-    "materialize-css": "^0.97.8",
-    "materialize": "^1.0.0"
+    "materialize": "^1.0.0",
+    "materialize-css": "^0.97.8"
   },
   "devDependencies": {
     "@easy-webpack/config-aurelia": "^2.0.1",
